# proxy-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.audit-reports/: audit-report-vagent-revisit-2026-07-12.md  gap-analysis-v2ray-agent-2026-07-13.md  menu-alignment-v2ray-agent-2026-07-12.md
.github/workflows/: changelog.yml  ci.yml
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  main.rs
crates/api/ui/: index.html
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/commands/: apply.rs  core_ctl.rs  core_install.rs  init.rs  menu.rs  mod.rs  nginx.rs  nginx_install.rs  reality.rs  render.rs  route.rs  scan.rs  service.rs  status.rs  uninstall.rs  user.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: download.rs  error.rs  executor.rs  exit.rs  firewall.rs  lib.rs  reality.rs  reality_scan.rs  routing.rs  spec.rs  subscribe.rs  systemd.rs  tls.rs  update.rs
crates/core/src/core/: mod.rs  singbox.rs  xray.rs
crates/core/src/render/: mod.rs  nginx.rs  singbox.rs  xray.rs
docs/: ARCHITECTURE.md  NON-ROOT-DEPLOYMENT.md
scripts/: vps-e2e.sh
